fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Sales_Manager_Filter__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Filter__c</fullName>
    <description>Old Code:

if( Role_Toggle__c = &quot;REP&quot;, Territory__r.Manager_Name__c,
/* Active RSM */
if(AND(Role_Toggle__c = &quot;RSM&quot;,Territory__r.Manager__r.IsActive = TRUE),  Territory__r.Sales_Rep__r.FirstName &amp; &quot; &quot; &amp; Territory__r.Sales_Rep__r.LastName,NULL))</description>
    <formula>if(AND (NOT(ISBLANK(Territory__r.Manager__c)),Territory__r.Manager__r.IsActive = TRUE),Territory__r.Manager_Name__c, 
if(AND(NOT(ISBLANK(Territory__r.Parent_Territory__r.Sales_Rep__c)),Territory__r.Parent_Territory__r.Primary_Sales_Rep_Flip__c = FALSE),Territory__r.Parent_Territory__r.Sales_Rep_Name__c, 
if(NOT(ISBLANK(Territory__r.Parent_Territory__r.Primary_Territory_User__c)),Territory__r.Parent_Territory__r.Primary_Territory_User_Name__c, 
NULL 
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager Filter</label>
    <type>Text</type>
</CustomField>