fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Sales_Rep_Name_Simple__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name_Simple__c</fullName>
    <formula>Territory__r.Sales_Rep_Name_Simple__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Name Simple</label>
    <type>Text</type>
</CustomField>