fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <formula>IF(Claim_Request_Type__c =&apos;ZDIR&apos;,&apos;Direct&apos;,&apos;Indirect&apos;)</formula>
    <label>Sales Type</label>
    <type>Text</type>
</CustomField>