fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Territory_Quota__c.field-meta.xml
<CustomField>
    <fullName>Territory_Quota__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Quota</label>
    <referenceTo>Territory_Quota__c</referenceTo>
    <relationshipLabel>Invoiced Sales</relationshipLabel>
    <relationshipName>Invoiced_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>