fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Territory_Quota_Key__c.field-meta.xml
<CustomField>
    <fullName>Territory_Quota_Key__c</fullName>
    <label>Territory Quota Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>