fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>if(AND(DATEVALUE(Created_Date_Time__c)&gt;= DATEVALUE(&quot;2023-04-04&quot;), DATEVALUE(Created_Date_Time__c)&lt; DATEVALUE(&quot;2023-07-04&quot;)),2,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>