fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Workflow_Account_Sales_Key__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Account_Sales_Key__c</fullName>
    <formula>TEXT(YEAR(Date__c)) &amp; Territory_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Account Sales Key</label>
    <type>Text</type>
</CustomField>