fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/X7M_Current_Fiscal_Month_Number__c.field-meta.xml
<CustomField>
    <fullName>X7M_Current_Fiscal_Month_Number__c</fullName>
    <description>Created to support 7M calendar for Anesthesia and EMS</description>
    <formula>/* Created to support 7M calendar for Anesthesia and EMS*/

if(TODAY() &gt; DATEVALUE(&quot;2021-11-29&quot;), 12,
if(TODAY() &gt; DATEVALUE(&quot;2021-11-01&quot;), 11,
if(TODAY() &gt; DATEVALUE(&quot;2021-09-27&quot;), 10,
if(TODAY() &gt; DATEVALUE(&quot;2021-08-30&quot;), 9,
if(TODAY() &gt; DATEVALUE(&quot;2021-08-02&quot;), 8,
if(TODAY() &gt; DATEVALUE(&quot;2021-06-28&quot;), 7,
if(TODAY() &gt; DATEVALUE(&quot;2021-06-01&quot;), 6,

/* 2020*/
if(TODAY() &gt; DATEVALUE(&quot;2020-11-30&quot;), 12,
if(TODAY() &gt; DATEVALUE(&quot;2020-11-02&quot;), 11,
if(TODAY() &gt; DATEVALUE(&quot;2020-09-28&quot;), 10,
if(TODAY() &gt; DATEVALUE(&quot;2020-08-31&quot;), 9,
if(TODAY() &gt; DATEVALUE(&quot;2020-08-03&quot;), 8,
if(TODAY() &gt; DATEVALUE(&quot;2020-06-29&quot;), 7,
0

)))))))
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7M Current Fiscal Month Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>