fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/X7M_Current_Fiscal_Quarter_Sales__c.field-meta.xml
<CustomField>
    <fullName>X7M_Current_Fiscal_Quarter_Sales__c</fullName>
    <description>Created to support 7 month calendar for Anesthesia and EMS</description>
    <formula>AND(
X7M_Current_Fiscal_Quarter_Number__c = Current_Fiscal_Quarter_Number__c,
YEAR(Date__c) = YEAR(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>7M Current Fiscal Quarter Sales</label>
    <type>Checkbox</type>
</CustomField>