fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Old Value TEXT(YEAR(Date__c))</description>
    <formula>if(YEAR(TODAY()) = YEAR(Date__c), &quot;This Year&quot;,
if(YEAR(TODAY())-1 = YEAR(Date__c), &quot;Last Year&quot;,
NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>