fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/YOY_Flag_2__c.field-meta.xml
<CustomField>
    <fullName>YOY_Flag_2__c</fullName>
    <formula>MONTH(Date__c) &lt; MONTH(Business_Days__r.Date_Key__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Just like YOY Flag except that it excludes the current Month</inlineHelpText>
    <label>YOY Flag #2</label>
    <type>Checkbox</type>
</CustomField>