fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/YOY_Flag__c.field-meta.xml
<CustomField>
    <fullName>YOY_Flag__c</fullName>
    <formula>MONTH(Date__c) &lt;= MONTH(Business_Days__r.Date_Key__c)
/*
AND(
OR(
MONTH(Date__c) &lt;= MONTH(Business_Days__r.Date__c),
MONTH(Date__c) = 1
),
OR(
YEAR(Date__c) = YEAR(TODAY())-1,
YEAR(Date__c) = YEAR(TODAY())
)
)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Filters from current month back to January</inlineHelpText>
    <label>YOY Flag</label>
    <type>Checkbox</type>
</CustomField>