fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales__c/fields/YOY_YTD_Toggle__c.field-meta.xml
<CustomField>
    <fullName>YOY_YTD_Toggle__c</fullName>
    <formula>if(
OR(
MONTH(Date__c) &lt; MONTH(Business_Days__r.Date_Key__c) 
),&quot;Include Current Month&quot;, &quot;Exclude Current Month&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YOY YTD Toggle</label>
    <type>Text</type>
</CustomField>